[package]
name = "yoshi389111-miller-rabin"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An implementation of the Miller-Rabin probabilistic primality test"
repository = "https://github.com/yoshi389111/prime-algos-rs"
keywords = ["prime", "miller-rabin"]

[dependencies]
num-bigint = { version = "0.4.6", features = [ "rand" ] }
once_cell = "1.21.3"
rand = "0.8.5"
yoshi389111-prime-iter = { path = "../prime-iter" }
