[package]
name = "yoshi389111-next-prime"
version = "0.1.0"
edition = "2024"
description = "A library for finding the next prime number greater than a given BigUint number"
repository = "https://github.com/yoshi389111/prime-algos-rs"
keywords = ["prime", "wheel factorization"]

[dependencies]
num-bigint = "0.4.6"
yoshi389111-prime-iter = { path = "../prime-iter" }
num-traits = "0.2.19"
num-integer = "0.1.46"
once_cell = "1.21.3"

[dev-dependencies]
yoshi389111-miller-rabin = { path = "../miller-rabin" }
